--- a/BaseDeDatos_Conectada.csproj
+++ b/BaseDeDatos_Conectada.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControllerEscuela.cs" />
+    <Compile Include="Escuela.cs" />
     <Compile Include="Conection.cs" />
     <Compile Include="Mostrar.cs">
       <SubType>Form</SubType>
@@ -90,6 +92,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Properties\DataSources\Escuela.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
